Fix background incorrectly showing on smaller screen sizes

--- a/main.css
+++ b/main.css
@@ -82,11 +82,6 @@ p {
 }
 
 @media (max-width: 700px) {
-  body {
-    background: url('img/shoes.jpg') no-repeat center center;
-    background-size: cover;
-  }
-
   main {
     padding: 30px 10px 10px 10px;
     text-align: center;
